--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "@ngneat/hot-toast": "^3.4.3",
+    "@ngneat/overview": "^2.0.2",
     "bootstrap": "^4.4.0",
     "moment": "^2.29.4",
     "ngx-filter-pipe": "^2.1.2",
